fix spacing on project image,fix spacing on last project to get closer to headin

--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -22,12 +22,13 @@
         color:$primary-text-color;
         line-height: $m-body-lh;
         margin-bottom: $small-spacing;
+        max-width: min(34rem,100%);
     }
     &__image-container{
         width:16rem;
         height:25rem;
         background-color: #D9D9D9;
-        margin: $small-spacing auto;
+        margin: $medium-spacing auto;
         
     }
     &__features{
